--- a/Project 1/project.html
+++ b/Project 1/project.html
@@ -2,20 +2,20 @@
 <html>
     <head>
         <meta charset=”utf-8”>
-        <title>1&ordf; aula - CG@IST/UL</title>
+        <title>Lab 1</title>
         <style>
             body {
                 margin: 0px;
                 background-color: #fff;
                 overflow: hidden;
+            }
         </style>
         <script src="js/three.js"></script>
         <script src="js/code.js"></script>
     </head>
     <body>      
         <script>
-            init();
-            animate()
+            window.onload = init();
         </script>
     </body>
 </html>
